feat : recurso do canhao apontando para o mouse

--- a/src/components/cannon/style.module.css
+++ b/src/components/cannon/style.module.css
@@ -1,21 +1,22 @@
-.cannon {
+.tank {
   width: 3rem;
   height: 2rem;
   background: #e7eb00;
   position: absolute;
   bottom: 10px;
   transition: all 0.1s linear;
-  border: 1px solid blue;
+  border: 1px solid rgb(241, 39, 4);
 }
 
-.cannon::before {
-  content: "";
+.cannon {
   width: 10px;
   height: 2rem;
   background-color: #b1fd00;
   display: block;
-  top: -10px;
-  left: 50%;
-  transform: translateX(-50%);
+  top: -15px;
+  left: 39%;
   position: absolute;
+  transform-origin: bottom;
+  transform: rotate(180deg);
+  transition: rotate 0.1s linear;
 }
